--- a/IntrospectGitHubPageGenerator/html/index.html
+++ b/IntrospectGitHubPageGenerator/html/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html style="background-color:#0F0F0F;">
+ <head>
+  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"></meta>
+  <title>Introspect-Framework</title>
+ </head>
+ <body>
+  <div id="titleLogo" style="position:fixed;top:0;width:100%;height:100px;">
+   <img style="width:8cm;" src="images/introspect.png"></img>
+   <div id="buttonBar" style="position:absolute;bottom:0;right:0;width:114px;">
+    <div style="float:left;background-color:#909090;width:25px;height:25px;margin-bottom:5px;-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;color:#FFFFFF;font-family:'Arial Black';font-size:18px;text-align:center;">&lt;</div>
+    <div style="float:left;background-color:#909090;width:25px;height:25px;margin-bottom:5px;-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;color:#FFFFFF;font-family:'Arial Black';font-size:18px;text-align:center;margin-left:10px;">^</div>
+    <div style="float:left;background-color:#909090;width:25px;height:25px;margin-bottom:5px;-webkit-border-radius:5px;-khtml-border-radius:5px;-moz-border-radius:5px;-ms-border-radius:5px;-o-border-radius:5px;border-radius:5px;color:#FFFFFF;font-family:'Arial Black';font-size:18px;text-align:center;margin-left:10px;">&gt;</div>
+   </div>
+  </div>
+  <table style="margin-top:100px;width:100%;">
+   <tr>
+    <td style="width:25%;vertical-align:top;">
+     <div id="menu" style="background-color:#F0F0F0;padding:7px;-webkit-border-radius:10px;-khtml-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;-o-border-radius:10px;border-radius:10px;"><b>Menu</b><br>HTML<br>CSS<br>JavaScript</div>
+    </td>
+    <td style="width:75%;padding-left:10px;vertical-align:top;">
+     <div id="content" style="background-color:#F0F0F0;padding:7px;-webkit-border-radius:10px;-khtml-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;-o-border-radius:10px;border-radius:10px;"><h1>Content</h1><br>Text text bla bla ....</div>
+    </td>
+   </tr>
+  </table>
+ </body>
+</html>
